# nursery

./: .gitignore  README.md
AATE/: COPYING  NEWS  README.md  setup.py
MaddySSH/: .gitignore  README
alicorn/: .gitignore  .gitmodules  Makefile  README.md  configure.ac  extra.mk.in
alicorn/help/acct/: acct  add  del  help  set  set_password
alicorn/help/core/: die  help  save
alicorn/modules/: Makefile
alicorn/src/: Makefile  account.c  alicorn.h  autoconf.h.in  cap.c  client.c  cmdsock.c  command.c  config.c  core.c  db.c  log.c  main.c  module.c  network.c  route.c  user.c
alonzo/: .gitignore  Makefile  alias.c  alias.h  alonzo-bot.rb  alonzo.c  lambda.c  lambda.h
arnold/: README  arnold  arnold-mod  mkmod
asm68k/: Cargo.toml
bob/: .gitignore  README.txt
bot/: README.md
brtcfg/: .gitignore  Makefile  brtcfg.c
cray/: .gitignore  Cargo.toml  README.md  ROADMAP.md
edward/: .gitignore  Makefile  edward.c  edward.d
elftools/: .gitignore  Cargo.toml  README.md
exodus/: .gitignore  README  data_test.py  setup.py
iee380/: .gitignore  .gitmodules  README.md
img2xrdb/: README  img2xrdb.py  preamble.Xresources
kkd/: .gitignore  README.md  kkd.c
markov/: README  create_from_file  create_from_file.c  markov.c  markov.h  simple_usage.c
mat447/: .gitignore  Makefile  README  division.c  elliptic.c  main.c  null.c  pari.c  pm1.c  rho.c  runtest  test.h
mop-spim/: .gitignore  Makefile  README.txt  mop_spim.sh
netline/: .gitignore
paren/: .gitignore  (+6 more)
rust-theater/: Cargo.toml  README.md
rust-theater/src/: actor.rs  container.rs  lib.rs
(+199 files in other folders)
